# rust-dating-board

./: .env  .env_prod  .gitignore  Cargo.toml  Procfile  Readme.md  build.rs  infa  notes.txt
locales/: uk.json
migration/: README.md
migration/src/: lib.rs  m20230223_000001_create_profile_table.rs  m20230223_000001_create_user_table.rs  m20230223_000002_create_profile_table.rs  m20230223_000002_create_profilephoto_table.rs  m20230223_000003_create_profilephoto_table.rs  m20230304_000004_create_city_table.rs  m20230317_000005_create_report_profile_table.rs  m20240408_000005_alter_profile_with_weight.rs  m20240420_000006_alter_profile_with_view.rs  m20240501_000007_create_comment_table.rs
src/: config.rs  constant.rs  example.txt  main.rs
src/database/: mod.rs  service.rs
src/database/entities/: model.rs
src/db/: city.rs  comment.rs  db_provider.rs  mod.rs  prelude.rs  profile.rs  profile_photo.rs  report_profile.rs  service.rs  user.rs
src/web_api/: html_page.rs  mod.rs  model.rs  recaptcha.rs  routes.rs
src/web_api/auth/: authentication_gate.rs  authentication_guard.rs  mod.rs  session_manager.rs
src/web_api/photo/: mod.rs  service.rs
src/web_api/routes/: add_page.rs  add_profile_page.rs  authorization_endpoint.rs  bot_detector_gate.rs  common.rs  constant.rs  constants.rs  edit_profile_page.rs  error.rs  home_page.rs  html_render.rs  manage_profile_service.rs  mod.rs  p404_page.rs  profile_endpoints.rs  robots_page.rs  sitemap_page.rs  util.rs  validator.rs  view_profile_page.rs
src/web_api/routes/error/: html_error.rs  json_error.rs  mod.rs
src/web_api/sign_in/: google.rs  mod.rs
static/css/: fontello.css  jquery.filer.css  styles.css
static/font/: fontello.eot
static/js/: fileinput.min.js
static/js/locales/: uk.js
templates/: add_edit_profile.stpl  add_or_edit_profile.stpl  add_profile.stpl  extra_scripts.stpl  head.stpl  home.stpl  manage_profile.stpl  nav.stpl  p404.stpl  sitemap.stpl  view_profile.stpl
templates/includes/: comments.stpl  extra_scripts.stpl  footer.stpl  head.stpl  head_body.stpl  message_modal.stpl  nav.stpl
