[package]
name = "hot_esc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-files = "0.6.2"
sailfish = "0.6.0"
serde = { version = "1.0.152", features = ["derive"] }

[dependencies.sea-orm]
version = "0.11.0"
features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ]
default-features = false
