[package]
name = "hot_esc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-files = "0.6.2"
actix-cors = "0.6.4"
actix-session = "0.7.2"
argon2 = "0.4.1"
dotenv = "0.15.0"
sailfish = "0.6.0"
# verify oauth2
jsonwebtoken-google = "0.1.6"
# manage own auth session
jsonwebtoken="8.2.0"

serde = { version = "1.0.152", features = ["derive"] }
chrono = "0.4.23"

[dependencies.sea-orm]
version = "0.11.0"
features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono" ]
default-features = false
