[package]
name = "rust-dating-board"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-files = "0.6.2"
actix-cors = "0.6.4"
actix-session = "0.7.2"
dotenv = "0.15.0"
sailfish = "0.6.0"
jsonwebtoken-google = "0.1.6"
jsonwebtoken="8.2.0"
serde = { version = "1.0.152", features = ["derive"] }
chrono = "0.4.23"
actix-multipart = "0.6.0"
futures = "0.3.26"
awc = { version = "3.1.1", features = ["rustls"] }
mime = "0.3.16"
rust-i18n = "3.0.1"
image = "0.25.1"
imageproc = "0.24.0"
ab_glyph = "0.2.24"
env_logger = "0.11.3"
log = "0.4.21"

[dependencies.sea-orm]
version = "0.11.0"
features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid", ]
default-features = false

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]

[build-dependencies]
copy_to_output = "2.1.0"
glob = "0.3"
